# sql_to_excel

./: pyproject.toml
file_creator/: __init__.py  excel_generator.py
test/: create_test_data.py  emission_data.csv  order_leg.json  test_formatting_elements.py  test_output.xlsx
